<resources>
    <string name="app_name">Calculo Sinais</string>
    <string name="contacto">team.iscode@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtBtn">Calcular</string>
    <string name="hintValorSaida">Valor Saída</string>
    <string name="hintCem">cem%</string>
    <string name="hintZero">zero%</string>
    <string name="textValorEntrada">Valores Entrada</string>
    <string name="txtValorSaida">Valores Saida</string>
    <string name="hintValorEntrada">Valor Entrada</string>
    <string name="SinalEntrada">Sinal Entrada</string>
    <string name="SinalSaida">Sinal Saída</string>
    <string name="saida">Saída</string>
    <string name="entrada">Entrada</string>
    <string name="zero">Zero</string>
    <string name="cem">cem</string>
    <string name="unidade_de_medida">Un. Medida:</string>
    <string name="legend">* Required</string>
    <string name="config_values">Config Values</string>
    <string name="percentage">%</string>
    <string name="main_float">main_float</string>
    <string name="ficha_calibracao">Ficha Calibração</string>
    <string name="valores_config">Valores Config</string>
    <string name="valores_calculados">Valores Cálculados</string>
    <string name="saida_txt">Saída</string>
    <string name="padrao_txt">Padrão</string>
    <string name="erro_txt">Erro</string>
    <string name="limite_aceitaco">Limite Aceitação</string>
</resources>

