<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/textValorEntrada"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/unidade_de_medida"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/darkGrey"
            app:cursorColor="@color/dirtyWhite"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unidadeMedidaEntrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/grey"
                android:textColor="@color/dirtyWhite"
                android:textColorHighlight="@color/dirtyWhite"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintZero"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/darkGrey"
            app:cursorColor="@color/dirtyWhite"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zeroValueEntrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:background="@color/grey"
                android:textColor="@color/dirtyWhite"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintCem"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/darkGrey"
            app:cursorColor="@color/dirtyWhite"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cemValueEntrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:background="@color/grey"
                android:textColor="@color/dirtyWhite"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/txtValorSaida"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/unidade_de_medida"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/darkGrey"
                app:cursorColor="@color/dirtyWhite"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unidadeMedidaSaida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@color/grey"
                    android:textColor="@color/dirtyWhite"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/hintZero"
                app:helperText="*"
                app:helperTextTextColor="@color/red"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/darkGrey"
                app:cursorColor="@color/dirtyWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zeroValueSaida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:background="@color/grey"
                    android:textColor="@color/dirtyWhite"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintCem"
                app:helperText="*"
                app:helperTextTextColor="@color/red"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/darkGrey"
                app:cursorColor="@color/dirtyWhite"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cemValueSaida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:background="@color/grey"
                    android:textColor="@color/dirtyWhite"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/legend"/>


</LinearLayout>