<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1"
        android:background="@color/darkGrey">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEntrada"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/grey">

            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/grey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleInput"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textValorEntrada"
                        android:textSize="18sp"/>

                    <Spinner
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/spinnerEntrada"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:entries="@array/spinner"
                        android:popupBackground="@color/grey"/>

                </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1,2,3,6">

                        <TableRow
                            android:layout_marginTop="6dp"
                            >
                            <TextView
                                android:layout_column="1"
                                android:text="@string/percentage"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_column="5"
                                android:layout_marginStart="50dp"
                                android:layout_marginEnd="5dp"
                                android:gravity="start"
                                android:text="@string/unidade_de_medida"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                            <TextView
                                android:id="@+id/uMedidaEntradaValue"
                                android:layout_width="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:textColor="@color/dirtyWhite"
                                android:layout_marginEnd="5dp"/>
                        </TableRow>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewEntrada"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"/>

                    </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSaida"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/grey">

            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/grey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtValorSaida"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <Spinner

                        android:layout_marginStart="50dp"
                        android:id="@+id/spinnerSaida"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:entries="@array/spinner"
                        android:popupBackground="@color/grey"/>

                </LinearLayout>

                <TableLayout
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1,2,3,6">

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/percentage"
                            android:textSize="20sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="5"
                            android:text="@string/unidade_de_medida"
                            android:gravity="start"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="5dp"
                            />

                        <TextView
                            android:id="@+id/uMedidaSaidaValue"
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:gravity="start"
                            android:textSize="20sp"
                            android:textColor="@color/dirtyWhite"
                            android:layout_marginEnd="5dp"
                            />
                    </TableRow>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewSaida"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/floatLayoutConst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFloatBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/plus_sign"
            android:backgroundTint="@color/grey"
            app:borderWidth="0dp"
            android:contentDescription="@string/main_float"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/settings_24"
            android:backgroundTint="@color/grey"
            app:borderWidth="0dp"
            android:visibility="gone"
            android:contentDescription="@string/config_values"
            app:layout_constraintEnd_toEndOf="@id/mainFloatBTN"
            app:layout_constraintBottom_toTopOf="@id/mainFloatBTN"
            />

        <TextView
            android:id="@+id/configValuesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valores_config"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingHorizontal="25dp"
            android:paddingVertical="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/floatBTN"
            app:layout_constraintTop_toTopOf="@id/floatBTN"
            app:layout_constraintBottom_toBottomOf="@id/floatBTN"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/calibFileFloatBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/calib_icon"
            android:backgroundTint="@color/grey"
            app:borderWidth="0dp"
            android:visibility="gone"
            android:contentDescription="@string/config_values"
            app:layout_constraintEnd_toEndOf="@id/floatBTN"
            app:layout_constraintBottom_toTopOf="@id/floatBTN"
            />

        <TextView
            android:id="@+id/calibFileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ficha_calibracao"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingHorizontal="25dp"
            android:paddingVertical="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/calibFileFloatBTN"
            app:layout_constraintTop_toTopOf="@id/calibFileFloatBTN"
            app:layout_constraintBottom_toBottomOf="@id/calibFileFloatBTN"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>